--- a/mobile/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/mobile/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/nav_camera"
         android:icon="@android:drawable/ic_menu_camera"
-        android:title="Camera" />
+        android:title="Train" />
 
     <item
         android:id="@+id/nav_profile"
