--- a/mobile/app/src/main/res/layout/activity_workout.xml
+++ b/mobile/app/src/main/res/layout/activity_workout.xml
@@ -15,6 +15,15 @@
         android:layout_height="wrap_content"
         android:background="#80000000">
 
+        <ImageButton
+            android:id="@+id/btnSwitchCamera"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent"
+            android:src="@android:drawable/ic_menu_camera"
+            app:tint="@android:color/white"
+            android:contentDescription="Switch camera"/>
+
         <TextView
             android:id="@+id/tvExerciseName"
             android:text="Squat Training"
@@ -53,7 +62,9 @@
         <androidx.camera.view.PreviewView
             android:id="@+id/previewView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            app:scaleType="fillCenter"
+            app:implementationMode="compatible"/>
 
         <!-- Overlay for skeleton and guidance -->
         <com.example.fitnesscoachai.ui.workout.OverlayView
